--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arrempee/gatsby-theme-mdx-blog",
-  "version": "1.0.2",
-  "description": "A meta-theme that brings together the mdx-pages, mdx-collections, and plugin-taxonomies to scaffold the logic for a basic MDX file-based blog.",
+  "version": "1.1.0",
+  "description": "A Gatsby meta-theme that brings together theme-mdx-pages, plugin-collections, and plugin-taxonomies to scaffold the logic for a basic MDX file-based blog.",
   "main": "gatsby-config.js",
   "repository": "rogermparent/gatsby-theme-mdx-blog",
   "scripts": {
@@ -18,7 +18,7 @@
   "dependencies": {
     "@arrempee/gatsby-helpers": "^1.0.0",
     "@arrempee/gatsby-theme-mdx-pages": "^1.0.0",
-    "@arrempee/gatsby-theme-mdx-collections": "^1.0.0",
+    "@arrempee/gatsby-plugin-collections": "^1.0.0",
     "@arrempee/gatsby-plugin-taxonomies": "^1.0.0",
     "@mdx-js/mdx": "^1.1.1",
     "@mdx-js/react": "^1.1.1",
